# ecomm-arb

./: .env.example  .gitignore  AGENTS.md  Makefile  docker-compose.yml  ecom_arb.db  pyproject.toml
.beads/: assignments.json  interactions.jsonl  issues.jsonl  metadata.json  redirect
.claude/: CLAUDE.md
.claude/commands/: release.md
.claude/rules/: safety.md
.claude/skills/prime/: SKILL.md
.claude/templates/beads/: bead-structure.md
PLAN/: 00_north_star.md  01_requirements.md  03_decisions.md  04_risks_and_spikes.md  06_crawl_system_spec.md  06_llm_product_analysis.md  SPIKE-007_storefront_feasibility.md
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_crawl_queue_tables.py  003_add_price_monitoring_tables.py
docs/plans/: 2026-01-02-crawl-queue-design.md
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts
scripts/: dev-down.sh  dev-up.sh  get_google_ads_token.py  init_db.py  seed.py
src/ecom_arb/: __init__.py  cli.py  config.py
src/ecom_arb/api/: __init__.py  app.py
src/ecom_arb/db/: __init__.py  base.py  models.py
src/ecom_arb/integrations/: __init__.py  cj_dropshipping.py  google_ads.py  keepa.py  serpwatch.py
src/ecom_arb/scoring/: __init__.py  calculator.py  filters.py  models.py  scorer.py
src/ecom_arb/services/: __init__.py  amazon_parser.py  cj_parser.py  discovery.py  keyword_explorer.py  llm_analyzer.py  pipeline.py  product_scanner.py  proxy.py  (+1 more)
tests/: __init__.py  conftest.py  test_calculator_api.py  test_cj_dropshipping.py  test_discovery.py  test_google_ads.py  test_keepa.py  test_pipeline.py  test_prices.py  test_product_scanner.py  test_scored_api.py  test_scoring.py
(+19 files in other folders)
